--- a/css/common/layout.css
+++ b/css/common/layout.css
@@ -7,7 +7,7 @@
 
 .content-wrapper {
     position: relative;
-    z-index: 2;
+    /* z-index: 1000; */
     max-width: 1200px;
     margin: 0 auto;
     padding: 2rem;
