--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -4,6 +4,7 @@
     margin-bottom: 2rem;
     min-height: auto;
     width: 100%;
+    margin-top: -12rem
 }
 
 .background-image {
@@ -15,13 +16,13 @@
     background-image: url('/images/background/background.jpg');
     background-size: cover;
     background-position: center;
-    opacity: 0.2;
+    opacity: 1;
     z-index: -1;
 }
 
 .content-wrapper {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     max-width: 1200px;
     margin: 0 auto;
     padding: 3rem;
@@ -45,6 +46,7 @@
 .text-content {
     flex: 0 1 60%;
     padding-right: 2rem;
+    z-index: 1000;
 }
 
 .profile-image {
@@ -90,6 +92,7 @@ h1 {
 .about {
     margin: 2rem 0 2.5rem 0;
     position: relative;
+    z-index: 2;
 }
 
 .about p {
